# team-nust-robocup

./: .gitmodules  CMakeLists.txt  Makefile  README.md  qiproject.xml  team-nust-robocup-qt.files  team-nust-robocup-qt.includes
.qi/: path.conf
Make/: Makefile  common.mk
Resources/Simulator/: .goutputstream-YA301Y  CMakeLists.txt  SensorsEnum.h  VREPInterface.cpp  VREPInterface.h  kick-simulations.sh  main.cpp  octave-workspace  sim-interface-logs.txt  simulation-match.sh  simulation-single.sh  vrep-logs.txt
Resources/Simulator/Scene/: KickTests.ttt
Resources/Simulator/cmake/: FindNAOqiSIM.cmake
Resources/Simulator/simulator-startup-stiffness/: simulator-startup-stiffness.cpp
Resources/TestClient/: CMakeLists.txt  client.cpp  qiproject.xml
Scripts/: copyCfg  (+2 more)
Src/ConfigManager/: CMakeLists.txt  Makefile  qiproject.xml
Src/ConfigManager/.qi/: path.conf
Src/ConfigManager/include/: ConfigMacros.h
Src/ConfigManager/nbproject/: configurations.xml  project.xml
Src/ConfigManager/nbproject/private/: Remote-Release.properties  configurations.xml
Src/ConfigManager/src/: ConfigManager.cpp
Src/TNRSModules/MotionModule/: CMakeLists.txt  Makefile  octave-workspace
Src/TNRSModules/MotionModule/.qi/: path.conf
Src/TNRSModules/MotionModule/include/: MBManager.h  MotionBehavior.h  MotionBehaviorIds.h  MotionGenerator.h  MotionModule.h  MotionRequest.h
Src/TNRSModules/MotionModule/include/BalanceModule/: BalanceDefinitions.h  BalanceModule.h  BalanceZmpRefGen.h  ZmpPreviewController.h  ZmpRef.h  ZmpRefGenerator.h
Src/TNRSModules/MotionModule/include/BalanceModule/Types/: MPComControl.h  PIDComControl.h  ZmpControl.h
Src/TNRSModules/MotionModule/include/BallThrow/: BallThrow.h
Src/TNRSModules/MotionModule/include/BallThrow/Types/: WBBallThrow.h
Src/TNRSModules/MotionModule/include/DiveModule/: DiveModule.h  KeyFrameDiveTypes.h
Src/TNRSModules/MotionModule/include/DiveModule/Types/: KeyFrameMotionDive.h
Src/TNRSModules/MotionModule/include/FallDetector/: FallDetector.h
Src/TNRSModules/MotionModule/include/GetupModule/: GetupModule.h  KeyFrameGetupTypes.h
Src/TNRSModules/MotionModule/include/GetupModule/Types/: KeyFrameMotionGetup.h
Src/TNRSModules/MotionModule/include/HeadControl/: HeadControl.h  HeadTargetTypes.h
Src/TNRSModules/MotionModule/include/HeadControl/Types/: HeadTargetSearch.h  HeadTargetTrack.h
Src/TNRSModules/MotionModule/include/ImuFilter/: ImuDataFilter.h
Src/TNRSModules/MotionModule/include/KickModule/: FootContours.h  KickModule.h  KickUtils.h  MaxMomentumEEOpt.h
Src/TNRSModules/MotionModule/include/KickModule/Types/: JSE2DImpKick.h  JSOImpKick.h  JointSpaceKick.h  KickImpact2DSolver.h
Src/TNRSModules/MotionModule/include/KinematicsModule/: ComEstimator.h  ComState.h  JointStateType.h  KinematicsConsts.h  KinematicsModule.h  LinkInertiaConsts.h  MotionTask.h  TaskIkSolver.h  TorsoState.h
Src/TNRSModules/MotionModule/include/MotionConfigs/: MBBalanceConfig.h  MBBallThrowConfig.h  MBConfig.h  MBDiveConfig.h  MBGetupConfig.h  MBHeadControlConfig.h  MBKickConfig.h  MBMovementConfig.h  MBPostureConfig.h
Src/TNRSModules/MotionModule/include/MovementModule/: MovementModule.h
Src/TNRSModules/MotionModule/include/PathPlanner/: PathCostHeuristic.h  PathPlanner.h  PathPlannerEnvironment.h  PlanningState.h  PlanningStateChangeQuery.h  helper.h
Src/TNRSModules/MotionModule/include/PostureModule/: PostureDefinitions.h  PostureModule.h
Src/TNRSModules/MotionModule/include/PostureModule/Types/: InterpToPosture.h
Src/TNRSModules/MotionModule/include/TrajectoryPlanner/: BSpline.h  CbOptimizer.h  CubicSpline.h  TrajOptimizer.h  TrajectoryPlanner.h
Src/TNRSModules/MotionModule/src/: MBManager.cpp  MotionBehavior.cpp  MotionLogger.cpp  MotionModule.cpp
Src/TNRSModules/MotionModule/src/BalanceModule/: BalanceModule.cpp  BalanceZmpRefGen.cpp  ZmpPreviewController.cpp
Src/TNRSModules/MotionModule/src/BalanceModule/Types/: MPComControl.cpp  PIDComControl.cpp  ZmpControl.cpp
Src/TNRSModules/MotionModule/src/BallThrow/: BallThrow.cpp
Src/TNRSModules/MotionModule/src/DiveModule/: DiveModule.cpp
Src/TNRSModules/MotionModule/src/FallDetector/: FallDetector.cpp
Src/TNRSModules/MotionModule/src/GetupModule/: GetupModule.cpp
Src/TNRSModules/MotionModule/src/HeadControl/: HeadControl.cpp
Src/TNRSModules/MotionModule/src/KickModule/: KickModule.cpp  MaxMomentumEEOpt.cpp
Src/TNRSModules/MotionModule/src/KinematicsModule/: ComEstimator.cpp  KinematicsModule.cpp  TastIkSolver.cpp
Src/TNRSModules/MotionModule/src/MotionConfigs/: MBBalanceConfig.cpp  MBDiveConfig.cpp  MBGetupConfig.cpp  MBKickConfig.cpp  MBMovementConfig.cpp  MBPostureConfig.cpp
Src/TNRSModules/MotionModule/src/MovementModule/: MovementModule.cpp
Src/TNRSModules/MotionModule/src/PathPlanner/: Footstep.cpp  GridMap2D.cpp  MyHeuristic.cpp  PathPlanner.cpp  PlanningState.cpp  State.cpp  helper.cpp
Src/TNRSModules/MotionModule/src/PostureModule/: PostureModule.cpp
Src/TNRSModules/MotionModule/src/TrajectoryPlanner/: BSpline.cpp  CbOptimizer.cpp  CubicSpline.cpp  TrajOptimizer.cpp  TrajectoryPlanner.cpp
Src/TNRSModules/MotionModule/tests/: test-motion-module.cpp
Src/TNRSModules/MotionModule/tests/include/: MotionModuleTests.h
Src/TNRSModules/MotionModule/tests/src/: MotionModuleTests.cpp
Src/Utils/: CMakeLists.txt  Makefile
Src/Utils/.qi/: path.conf
Src/Utils/include/: ArgParser.h  BSpline.h  BallInfo.h  ConfigMacros.h  ConfigManager.h  DataUtils.h  DebugUtils.h  GnuPlot.hpp  GnuPlotDefinitions.h  HardwareIds.h  JsonUtils.h  Landmark.h  MathsUtils.h  NLOptimizer.h  Obstacle.h  PlotEnv.h  PositionInput.h  PostureState.h  RobotStateDefinitions.h  TeamPositions.h  TeamRobot.h  Variable.h  VariadicMacros.h  VisionUtils.h
Src/Utils/include/Exceptions/: TNRSException.h
Src/Utils/include/Filters/: KalmanFilter.h  ProcessModel.h
Src/Utils/include/Solvers/: MotionEquationSolver.h
Src/Utils/src/: BSpline.cpp  ConfigManager.cpp  CubicSpline.cpp.autosave  DataUtils.cpp  DebugUtils.cpp  ThreadSafeVariable.cpp  deboor.py
Src/Utils/tests/: PlotEnvTests.cpp
(+579 files in other folders)
